--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.falldetectionproject">
       <uses-permission android:name="andriod.permission.CALL_PHONE"/>
+    <uses-permission android:name="andriod.permission.CALL_PHONE"/>
+
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
@@ -17,7 +19,9 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.CALL_PRIVILEGED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="tel" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
